source/css/views/_index.scss
.index {
  .hero-container {
    @media (min-height: 800px) {
      position: absolute;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
    }
  }

  .hero-title {
    font-size: 60px;
    margin-bottom: 60px;
    width: 280px;

    @media (min-width: 560px) {
      font-size: 70px;
      width: 510px;
    }

    @media (min-width: 960px) {
      font-size: 70px;
      width: 840px;
    }
  }

  .ideas {
    display: inline-block;
    border-bottom: 1px solid #eee;
    max-width: 100%;
    width: 4.35em;
    height: 1em;
    padding-bottom: 0.03em;
    text-align: left;

    .period {
      content: ".";
      position: relative;
      left: 4.4em;
    }
  }

  .words {
    display: inline;

    span {
      position: absolute;
      opacity: 0;
      overflow: hidden;
      animation: rotateWord 18s linear infinite 0s;

      &:nth-child(2) {
        animation-delay: 3s;
      }
      &:nth-child(3) {
        animation-delay: 6s;
      }
      &:nth-child(4) {
        animation-delay: 9s;
      }
      &:nth-child(5) {
        animation-delay: 12s;
      }
      &:nth-child(6) {
        animation-delay: 15s;
      }
    }
  }

  @keyframes rotateWord {
    0%   { opacity: 0; }
    2%   { opacity: 0; transform: translateY(-30px); transform: translateY(-30px); }
    5%   { opacity: 1; transform: translateY(0px);   transform: translateY(0px); }
    17%  { opacity: 1; transform: translateY(0px);   transform: translateY(0px); }
    20%  { opacity: 0; transform: translateY(30px);  transform: translateY(30px); }
    80%  { opacity: 0; }
    100% { opacity: 0; }
  }

  .info {
    margin-bottom: 60px;
  }

  .form {
    margin-bottom: 40px;
    .btn {
      font-size: inherit;
    }
  }
}

